# mcstructs

./: .npmignore  Cargo.toml  README.md  container_test.mcstructure  generated.mcstructure  index.d.ts  index.js  level.dat_old  mcstructs.h  package.json  target.mcstructure  test.mcstructure
pkg/: mcstructs.d.ts  mcstructs.js  mcstructs_bg.js  mcstructs_bg.wasm  mcstructs_bg.wasm.d.ts
src/: c_api.rs  lib.rs  nbt.rs  nbt_viewer.rs  test.rs  wasm_api.rs
src/nbt/: mod.rs
src/structure/: mod.rs
src/types/: mod.rs
