[package]
name = "mcstructs"
version = "0.1.0"
description = "A Rust crate and NPM package used for manipulating Minecraft Bedrock Edition structures and `.mcstructure` files."
edition = "2024"

[[bin]]
name = "nbt"
path = "src/nbt_viewer.rs"
[[bin]]
name = "lib_test"
path = "src/test.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = {version = "1.0.228", features = ["derive"]}
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.105"
